frontend/test/should_fail/index_pattern_index_multiple_access_crossed.grg
#using "index_multiple_model.gm"

rule i {
	n:N{ascending(Ni >= 0, N1j <= 1)};

	modify {
	}
}
